Sponsors Blurb Update

--- a/sponsors.html
+++ b/sponsors.html
@@ -49,7 +49,7 @@
   </div>
     <h2>Easy Composites</h2>
     <h3>OFFICIAL TEAM PARTNER</h3>
-    <p>Easy Composites is a leading supplier of composite materials and manufacturing equipment, dedicated to providing high-quality products and exceptional customer service. They are proud to support our team with their innovative solutions. <br> <br> Thank you so much for partnering with our team.</p>
+    <p>Easy Composites are true experts when it comes to advanced composite materials and manufacturing tools. Their innovative products make it easier for creators and engineers alike to bring ideas to life. We’re proud to have their ongoing support and to work with a team that’s as passionate about quality and innovation as we are. <br> <br> Thank you so much for partnering with our team.</p>
     <a href="https://www.easycomposites.co.uk/" class="discover-btn">DISCOVER</a>
   </div>
 <div class="sponsor-card">
@@ -58,7 +58,7 @@
           </div>
     <h2>Llandow Tuning</h2>
     <h3>OFFICIAL TEAM PARTNER</h3>
-    <p>Llandow Tuning is a premier automotive tuning company specializing in performance enhancements and custom modifications. They are dedicated to delivering top-notch services and products to their clients. <br> <br> Thank you so much for partnering with our team.</p>
+    <p>Llandow Tuning live and breathe performance. Known for their precision tuning and custom modifications, they’re the go-to people for anyone who wants to get the very best out of their car. Their dedication to excellence and attention to detail make them an incredible partner to have on board. <br> <br> Thank you so much for partnering with our team.</p>
     <a href="https://tuning.wales/" class="discover-btn">DISCOVER</a>
   </div>
 
@@ -79,7 +79,7 @@
           </div>
     <h2>DTAfast</h2>
     <h3>OFFICIAL TEAM PARTNER</h3>
-    <p>DTAfast is a leading provider of automotive tuning solutions, specializing in high-performance engine management systems. They are dedicated to supporting our team with their innovative products. <br> <br> Thank you so much for partnering with our team.</p>
+    <p>DTAfast are specialists in engine management and performance tuning, providing some of the most trusted solutions in motorsport and beyond. Their technology helps extract every ounce of potential from an engine, and their support continues to drive our performance forward. <br> <br> Thank you so much for partnering with our team.</p>
     <a href="https://dtafast.co.uk/" class="discover-btn">DISCOVER</a>
   </div>
 <div class="sponsor-card">
@@ -88,7 +88,7 @@
           </div>
     <h2>Proformance Metals</h2>
     <h3>OFFICIAL TEAM PARTNER</h3>
-    <p>Proformance Metals is a leading provider of high-quality metal products and services, specializing in custom solutions for various industries. They are committed to supporting our team with their exceptional offerings. <br> <br> Thank you so much for partnering with our team.</p>
+    <p>Proformance Metals supply top-quality metals and custom-engineered solutions to industries where strength and precision matter most. Their craftsmanship and expertise make them an invaluable partner, and we’re proud to work with a team that shares our commitment to excellence. <br> <br> Thank you so much for partnering with our team.</p>
     <a href="https://www.proformancemetals.co.uk/" class="discover-btn">DISCOVER</a>
   </div>
 <div class="sponsor-card">
