Fixing Localhost Capcha Settings

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
 
     <form 
       id="contactForm" 
-      action="https://formspree.io/f/YOUR_FORM_ID" 
+      action="https://formspree.io/f/mblzknll" 
       method="POST" 
       class="contact-form"
     >
@@ -75,7 +75,7 @@
         <input type="text" name="_honeypot" />
       </div>
 
-      <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY_HERE"></div>
+      <div class="g-recaptcha" data-sitekey="6Lc22uArAAAAADjtZ9Lhw-T7v3hpMeTeF8G7nIyV"></div>
 
       <button type="submit">Send Message</button>
     </form>
