--- a/project.html
+++ b/project.html
@@ -40,26 +40,36 @@
 		</div>
 	</div>
 	<main>
-   <div class="content-section">
+		<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
+		   <div class="content-section">
     <h1>The Project</h1>
-    <br>
-    <h2>Chassis</h2>
-    <p>The chassis is the main support structure of the car, to which all other components are attached. It is designed to be lightweight yet strong, providing the necessary rigidity to withstand the forces experienced during racing.</p>
-    <h2>Electrical</h2>
+	</div>
+		<div class="content-section-grid">
+    <div class="left-column">
+        <div class="section"><h2>Chassis</h2>
+			    <p>The chassis is the main support structure of the car, to which all other components are attached. It is designed to be lightweight yet strong, providing the necessary rigidity to withstand the forces experienced during racing.</p></div>
+
+			        <model-viewer alt="Chassis Model 2025" src="images/Final Spaceframe S26.glb" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+
+        <div class="section"><h2>Electrical</h2>
     <p>The electrical system of the car is responsible for powering all electronic components, including the motor, sensors, and control systems. It is designed to be efficient and reliable, ensuring optimal performance on the track.</p>
-        <h2>Powertrains</h2>
+       </div>
+        <div class="section">	 <h2>Powertrains</h2>
     <p>The powertrain is the group of components that generate power and deliver it to the road. This includes the engine, transmission, and drivetrain. The design of the powertrain is crucial for maximizing performance and efficiency.</p>
-        <h2>Aerodynamics</h2>
+       </div>
+    </div>
+    <div class="right-column">
+        <div class="section"><h2>Aerodynamics</h2>
     <p>Aerodynamics plays a vital role in the performance of the car, affecting its speed, stability, and fuel efficiency. The design of the car's bodywork is optimized to reduce drag and improve airflow, allowing for better handling and acceleration.</p>
-        <h2>Suspension</h2>
+        </div>
+        <div class="section"> <h2>Suspension</h2>
     <p>The suspension system of the car is responsible for maintaining contact between the tires and the road, providing stability and control during dynamic driving conditions. It is designed to absorb shocks and vibrations, ensuring a smooth ride and optimal handling.</p>
-        <h2>The Business & Costing</h2>
+        </div>
+        <div class="section"><h2>The Business & Costing</h2>
     <p>The business and costing aspect of the project involves budgeting for all components, materials, and labor required to build the car. This includes sourcing parts, estimating costs, and managing finances to ensure the project stays within budget.</p>
-
-
-
-    
-  </div>
+</div>
+    </div>
+</div>
 
 	</main>
 	<footer class="footer">
