--- a/project.html
+++ b/project.html
@@ -44,12 +44,14 @@
 		   <div class="content-section">
     <h1>The Project</h1>
 	</div>
+
 		<div class="content-section-grid">
+		<!-- <model-viewer alt="Chassis Model 2025" src="images/Final Spaceframe S26.glb" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer> -->
+
     <div class="left-column">
         <div class="section"><h2>Chassis</h2>
 			    <p>The chassis is the main support structure of the car, to which all other components are attached. It is designed to be lightweight yet strong, providing the necessary rigidity to withstand the forces experienced during racing.</p></div>
 
-			        <model-viewer alt="Chassis Model 2025" src="images/Final Spaceframe S26.glb" shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
 
         <div class="section"><h2>Electrical</h2>
     <p>The electrical system of the car is responsible for powering all electronic components, including the motor, sensors, and control systems. It is designed to be efficient and reliable, ensuring optimal performance on the track.</p>
