More Car History Updates & Formatting

--- a/cars.html
+++ b/cars.html
@@ -95,12 +95,12 @@
     <img src="images/Swansea Cars/S25.jpg" alt="Car 2025">
   </div>
   <div class="car-card">
-    <div class="year-badge">2024</div>
-    <img src="" alt="Car 2024"> 
+    <div class="year-badge">2024 Concept Class</div>
+    <img src="images/Swansea Cars/S24.png" alt="Car 2024"> 
   </div>
   <div class="car-card">
     <div class="year-badge">2023</div>
-    <img src="images/Swansea Cars/S23.jpg" alt="Car 2023">
+    <img src="images/Swansea Cars/S23.jpeg" alt="Car 2023">
   </div>
   <div class="car-card">
 	<div class="year-badge">2022</div>
@@ -140,7 +140,7 @@
 	  </div>
 	    <div class="car-card">
 	<div class="year-badge">2013</div>
-	<img src="images/Swansea Cars/S14.png" alt="Car 2013">
+	<img src="images/Swansea Cars/S13.jpeg" alt="Car 2013">
 	  </div>
 	    <div class="car-card">
 	<div class="year-badge">2012</div>
@@ -164,7 +164,7 @@
 	  </div>
 	    <div class="car-card">
 	<div class="year-badge">2007</div>
-	<img src="images/Swansea Cars/S07.jpg" alt="Car 2007">
+	<img src="images/Swansea Cars/S07.jpeg" alt="Car 2007">
 	  </div>
 	    <div class="car-card">
 	<div class="year-badge">2006</div>
@@ -172,7 +172,7 @@
 	  </div>
 	    <div class="car-card">
 	<div class="year-badge">2005</div>
-	<img src="images/Swansea Cars/S05.jpg" alt="Car 2005">
+	<img src="images/Swansea Cars/S05.jpeg" alt="Car 2005">
 	  </div>
 	    <div class="car-card">
 	<div class="year-badge">2004</div>
