--- a/index.html
+++ b/index.html
@@ -50,8 +50,28 @@
 			</div>
     <div class="carousel-overlay">
       <h1>Welcome to Swansea Formula Student</h1>
-      <p>Formula Student is Europe’s leading educational motorsport competition, bringing together university teams from around the world to design, build, and race single-seat cars.</p>
-      <a href="contact.html" class="sponsor-btn">Sponsor Us</a>
+      <p>Formula Student is Europe’s leading educational motorsport competition, bringing together university teams from around the world to design, build, and race single-seater cars.</p>
+	  <h2>Countdown To Silverstone:</h2>
+      <div id="countdown">
+  <div class="countdown-item">
+    <span id="days">00</span>
+    <p>Days</p>
+  </div>
+  <div class="countdown-item">
+    <span id="hours">00</span>
+    <p>Hours</p>
+  </div>
+  <div class="countdown-item">
+    <span id="minutes">00</span>
+    <p>Minutes</p>
+  </div>
+  <div class="countdown-item">
+    <span id="seconds">00</span>
+    <p>Seconds</p>
+  </div>
+</div>
+<br><br>
+	  <a href="contact.html" class="sponsor-btn">Sponsor Us</a>
     </div>
 		</div>
 		<div class="content-section">
@@ -136,6 +156,30 @@
 
 	     setInterval(moveToNextSlide, intervalTime);
 	   });
+
+
+		const targetDate = new Date("July 15, 2026 00:00:00").getTime();
+
+		const countdownFunction = setInterval(() => {
+			const now = new Date().getTime();
+			const distance = targetDate - now;
+
+			if (distance < 0) {
+			clearInterval(countdownFunction);
+			document.getElementById("countdown").innerHTML = "<h2>Event Day!</h2>";
+			return;
+			}
+
+			const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+			const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+			const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+			const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+			document.getElementById("days").textContent = days.toString().padStart(2, '0');
+			document.getElementById("hours").textContent = hours.toString().padStart(2, '0');
+			document.getElementById("minutes").textContent = minutes.toString().padStart(2, '0');
+			document.getElementById("seconds").textContent = seconds.toString().padStart(2, '0');
+		}, 1000);
 	</script>
 </body>
 </html>
