Another Team Photo

--- a/team.html
+++ b/team.html
@@ -181,7 +181,7 @@
         </div>
       </div>
                   <div class="team-member">
-            <img src=# onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Josh Roberts">
+            <img src="images/headshots/cropped/MohammedA.png" onerror="this.onerror=null; this.src='images/placeholder.png';" alt="Mohammed Alabsi">
         <div class="team-info">
           <h3>Mohammed Alabsi</h3>
           <h4>Head of Costing</h4>
