Update team photos

--- a/team.html
+++ b/team.html
@@ -237,7 +237,7 @@
 							</div>
 						</div>
 						<div class="team-member">
-							<img alt="Warwick Daden" onerror="this.onerror=null; this.src='images/placeholder.png';" src="#">
+							<img alt="Warwick Daden" onerror="this.onerror=null; this.src='images/placeholder.png';" src="images/headshots/cropped/CharlieHCropped">
 							<div class="team-info">
 								<h3>Charlie Hall</h3>
 								<h4>Software Engineer & Website Designer</h4>
