Sponsorship Changes & Team Photos

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 				<img alt="Vita BW" class="bw" src="images/vita-logo-removebg-previewbw.png"> <a aria-label="Vita" href="https://www.thevitagroup.com/"><img alt="Vita" class="colorimage" src="images/vita-logo-removebg-preview.png"></a>
 			</div>
 			<div class="sponsor-logo">
+				<img alt="Rapid Harness" class="bw" src="images/Rapid-Harness-Logobw.png"> <a aria-label="Rapid Harness" href="https://rapidharness.com/"><img alt="Rapid Harness" class="colorimage" src="images/Rapid-Harness-Logo.png"></a>
+			</div>
+			<div class="sponsor-logo">
 				<img alt="DTA BW" class="bw" src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-previewbw.png"> <a aria-label="DTA" href="https://dtafast.co.uk/"><img alt="DTA" class="colorimage" src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-preview.png"></a>
 			</div>
 			<div class="sponsor-logo">
