--- a/sponsors.html
+++ b/sponsors.html
@@ -28,6 +28,9 @@
 			<div class="sponsor-logo">
 				<img alt="Vita BW" class="bw" src="images/vita-logo-removebg-previewbw.png"> <a aria-label="Vita" href="https://www.thevitagroup.com/"><img alt="Vita" class="colorimage" src="images/vita-logo-removebg-preview.png"></a>
 			</div>
+						<div class="sponsor-logo">
+				<img alt="Rapid Harness" class="bw" src="images/Rapid-Harness-Logobw.png"> <a aria-label="Rapid Harness" href="https://rapidharness.com/"><img alt="Rapid Harness" class="colorimage" src="images/Rapid-Harness-Logo.png"></a>
+			</div>
 			<div class="sponsor-logo">
 				<img alt="DTA BW" class="bw" src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-previewbw.png"> <a aria-label="DTA" href="https://dtafast.co.uk/"><img alt="DTA" class="colorimage" src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-preview.png"></a>
 			</div>
@@ -43,6 +46,14 @@
 		<div class="content-section">
 			<h1>Our Sponsors</h1>
 			<section class="sponsors-section">
+								<div class="sponsor-card">
+					<div class="sponsor-img-wrapper"><img alt="Rapid Harness Logo" class="sponsor-img" src="images/Rapid-Harness-LogoONLY.png"></div>
+					<h2>Rapid Harness</h2>
+					<h3>OFFICIAL TEAM PARTNER</h3>
+					<p>Rapid Harness<br>Rapid Harness are specialists in wiring design software, providing intuitive tools that make it easier than ever to create professional, production-ready wiring harness drawings. We’re proud to work with a team that’s redefining how modern wiring design is done.
+					<br><br>
+					Thank you so much for partnering with our team.</p><a class="discover-btn" href="https://rapidharness.com/">DISCOVER</a>
+				</div>
 				<div class="sponsor-card">
 					<div class="sponsor-img-wrapper"><img alt="Easy Composites Logo" class="sponsor-img" src="images/EC%20Original-NT.png"></div>
 					<h2>Easy Composites</h2>
@@ -58,14 +69,6 @@
 					<p>Llandow Tuning live and breathe performance. Known for their precision tuning and custom modifications, they’re the go-to people for anyone who wants to get the very best out of their car. Their dedication to excellence and attention to detail make them an incredible partner to have on board.<br>
 					<br>
 					Thank you so much for partnering with our team.</p><a class="discover-btn" href="https://tuning.wales/">DISCOVER</a>
-				</div>
-				<div class="sponsor-card">
-					<div class="sponsor-img-wrapper"><img alt="The Vita Group Logo" class="sponsor-img" src="images/vitasmall.png"></div>
-					<h2>The Vita Group</h2>
-					<h3>OFFICIAL TEAM PARTNER</h3>
-					<p>The Vita Group is a leading provider of innovative foam solutions, specializing in the design and manufacture of high-performance materials for various industries. They are committed to supporting our team with their cutting-edge products.<br>
-					<br>
-					Thank you so much for partnering with our team.</p><a class="discover-btn" href="https://www.thevitagroup.com/">DISCOVER</a>
 				</div>
 			</section>
 			<section class="sponsors-section">
@@ -92,6 +95,29 @@
 					<p>Kestral Graphics is a leading provider of high-quality graphic design and branding solutions, specializing in custom designs for various industries. They are committed to supporting our team with their exceptional offerings.<br>
 					<br>
 					Thank you so much for partnering with our team.</p><a class="discover-btn" href="https://kestrel-graphics.co.uk/">DISCOVER</a>
+				</div>
+			</section>
+
+			<section class="sponsors-section">
+							<div class="sponsor-card">
+					<div class="sponsor-img-wrapper"><img alt="The Vita Group Logo" class="sponsor-img" src="images/vitasmall.png"></div>
+					<h2>The Vita Group</h2>
+					<h3>OFFICIAL TEAM PARTNER</h3>
+					<p>The Vita Group is a leading provider of innovative foam solutions, specializing in the design and manufacture of high-performance materials for various industries. They are committed to supporting our team with their cutting-edge products.<br>
+					<br>
+					Thank you so much for partnering with our team.</p><a class="discover-btn" href="https://www.thevitagroup.com/">DISCOVER</a>
+				</div>
+				<div class="sponsor-card">
+					<div class="sponsor-img-wrapper"></div>
+					<h2></h2>
+					<h3></h3>
+					<p></p>
+				</div>
+				<div class="sponsor-card">
+					<div class="sponsor-img-wrapper"></div>
+					<h2></h2>
+					<h3></h3>
+					<p></p>
 				</div>
 			</section>
 		</div>
