--- a/team.html
+++ b/team.html
@@ -28,6 +28,9 @@
 			<div class="sponsor-logo">
 				<img alt="Vita BW" class="bw" src="images/vita-logo-removebg-previewbw.png"> <a aria-label="Vita" href="https://www.thevitagroup.com/"><img alt="Vita" class="colorimage" src="images/vita-logo-removebg-preview.png"></a>
 			</div>
+						<div class="sponsor-logo">
+				<img alt="Rapid Harness" class="bw" src="images/Rapid-Harness-Logobw.png"> <a aria-label="Rapid Harness" href="https://rapidharness.com/"><img alt="Rapid Harness" class="colorimage" src="images/Rapid-Harness-Logo.png"></a>
+			</div>
 			<div class="sponsor-logo">
 				<img alt="DTA BW" class="bw" src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-previewbw.png"> <a aria-label="DTA" href="https://dtafast.co.uk/"><img alt="DTA" class="colorimage" src="images/DTAfast-logo-For-Black-BackSTROKE_c7a78a8e-de6f-48d5-bdb7-2d162b38976a-removebg-preview.png"></a>
 			</div>
@@ -209,7 +212,7 @@
 						<div class="team-member">
 							<img alt="Mohammed Alabsi" onerror="this.onerror=null; this.src='images/placeholder.png';" src="images/headshots/cropped/MohammedA.png">
 							<div class="team-info">
-								<h3>Mohammed Alabsi</h3>
+								<h3>Mohammed Al-Absi</h3>
 								<h4>Head of Costing</h4>
 								<p><b>University Course:</b>2nd Year Mechanical Engineering<br>
 								<b>Favourite F1 Team:</b>Mercedes<br>
@@ -237,7 +240,7 @@
 							</div>
 						</div>
 						<div class="team-member">
-							<img alt="Warwick Daden" onerror="this.onerror=null; this.src='images/placeholder.png';" src="#">
+							<img alt="Charlie Hall" onerror="this.onerror=null; this.src='images/placeholder.png';" src="/images/headshots/cropped/CharlieHCropped.png">
 							<div class="team-info">
 								<h3>Charlie Hall</h3>
 								<h4>Software Engineer & Website Designer</h4>
