--- a/cars.html
+++ b/cars.html
@@ -170,7 +170,7 @@
 				<div class="car-card">
 				<div class="year-badge">
 					2006
-				</div><img alt="Car 2006" src="images/Swansea%20Cars/S06.jpg"></div>
+				</div><img alt="Car 2006" src="images/Swansea%20Cars/S06.jpg.jpeg"></div>
 				<div class="car-card">
 				<div class="year-badge">
 					2005
