fixing style link

--- a/cars.html
+++ b/cars.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<title>Swansea FS Homepage</title>
-	<link href="style.css" rel="stylesheet">
+	<link href="/style.css" rel="stylesheet">
 	<link href="images/" rel="icon" type="image/x-icon">
 	<link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
