Sitemap Created, Index SEO Improved

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Swansea Formula Student</title>
+    <meta name="description" content="The Swansea University Formula Student team designing and building a competitive race car for UK Formula Student competitions.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Swansea University Formula Student Team | Swansea UniFS</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="public/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
