Final SEO Changes

--- a/history.html
+++ b/history.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Swansea Formula Student — History</title>
+    <title>Our History | Swansea Formula Student</title>
 
     <link rel="stylesheet" href="/style.css" />
     <link rel="icon" type="image/x-icon" href="public/favicon.ico" />
